# manim-videos

./: .gitignore  LICENSE  README.md  pyproject.toml  video.py
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: conf.py
docs/source/: changelog.rst  contributing.rst  how-it-works.rst  index.rst  limitations.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: animations.rst  index.rst  mixins.rst  mobjects.rst
examples/: README.md  basic_scene.py  slide_deck.py  trailer.py
manim_videos/: __init__.py  animations.py  mixins.py  mobjects.py
tests/: conftest.py  test_overlays.py
