[project]
name = "manim-videos"
dynamic = ["version"]
description = "Embed videos in Manim scenes and Manim Slides presentations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "manim_videos contributors" }]
keywords = ["manim", "animation", "video", "manim-slides", "presentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "manim>=0.18",
    "moviepy>=2.0",
]

[project.optional-dependencies]
slides = ["manim-slides>=5.0"]

[project.urls]
Homepage = "https://github.com/your-org/manim-videos"
Documentation = "https://your-org.github.io/manim-videos"
Repository = "https://github.com/your-org/manim-videos"
"Bug Tracker" = "https://github.com/your-org/manim-videos/issues"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mediapy>=1.2",
    "mypy>=1.19.1",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2.0",
    "manim-slides[pyside6-full,sphinx-directive]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manim_videos"]

[tool.hatch.version]
path = "manim_videos/__init__.py"

[tool.ruff]
line-length = 121

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["F403", "F405"]
